--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "chokidar": "^1.6.0",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "minimatch": "^3.0.2"
   }
 }
