--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "chokidar": "^1.6.0",
     "lodash": "^4.13.1",
     "minimatch": "^3.0.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
